--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>Leur</title>
 </head>
@@ -121,24 +122,28 @@
             node_dom('header[className=navbar-top]', {
                 onmouseleave: () => setSwitchActive(false)
             }, [
-                node_dom('h1[className=navbar-top__heading][innerText=Kalender]'),
-                node_dom('div[className=navbar-top__switch]', null, [
-                    switchActive ? node_dom('button[innerText=<]', {
-                        onclick: () => {
-                            changeMonth(months[activeMonth.id > 0 ? activeMonth.id - 1 : 11]);
-                            if (activeMonth.id === 0) changeYear(activeYear - 1)
-                        }
-                    }) : null,
-                    node_dom('h2[className=navbar-top__month]', {
-                        innerText: `${activeMonth.name} - ${activeYear}`,
-                        onmouseover: () => setSwitchActive(true),
+                node_dom('div[className=flex space-between]', null, [
+                    node_dom('h1[className=navbar-top__heading]', {
+                        innerText: `Kalender ${activeYear}`
                     }),
-                    switchActive ? node_dom('button[innerText=>]', {
-                        onclick: () => {
-                            changeMonth(months[activeMonth.id < 11 ? activeMonth.id + 1 : 0]);
-                            if (activeMonth.id === 11) changeYear(activeYear + 1)
-                        }
-                    }) : null
+                    node_dom('div[className=navbar-top__switch]', null, [
+                        switchActive ? node_dom('button[className=button icon-arrow-left]', {
+                            onclick: () => {
+                                changeMonth(months[activeMonth.id > 0 ? activeMonth.id - 1 : 11]);
+                                if (activeMonth.id === 0) changeYear(activeYear - 1)
+                            }
+                        }) : null,
+                        node_dom('h2[className=navbar-top__month]', {
+                            innerText: activeMonth.name,
+                            onmouseover: () => setSwitchActive(true),
+                        }),
+                        switchActive ? node_dom('button[className=button icon-arrow-right]', {
+                            onclick: () => {
+                                changeMonth(months[activeMonth.id < 11 ? activeMonth.id + 1 : 0]);
+                                if (activeMonth.id === 11) changeYear(activeYear + 1)
+                            }
+                        }) : null
+                    ])
                 ]),
                 node_dom('div[className=navbar-top__days cal__cells]', null, [
                     ...['MO', 'DI', 'MI', 'DO', 'FR', 'SA', 'SO'].map(day => (
@@ -152,7 +157,11 @@
     const CalEventDetails = ({calEvent, eventMutations, editModeSetter, addNew = true}) => {
         return [
             node_dom('div[className=cal-event__edit]', null, [
-                node_dom('button[className=cal-event__close button button--small][innerText=x]', {onclick: () => editModeSetter(false)}),
+                node_dom('button[className=cal-event__head]', null, [
+                    node_dom('button[className=cal-event__close button button--small icon-cross]', {
+                        onclick: () => editModeSetter(false)
+                    })
+                ]),
                 node_dom('input[className=cal-event__title]', {
                     onchange: (event) => (calEvent.label = event.target.value),
                     placeholder: calEvent.label
@@ -171,22 +180,24 @@
                 node_dom('input[className=cal-event__color input input--color][type=color]', {
                     onchange: (event) => (calEvent.color = event.target.value)
                 }),
-                !addNew ? node_dom('button[className=button button--sec][innerText=Löschen]', {
-                    onclick: () => {
-                        editModeSetter(false);
-                        eventMutations(REDUCER_TYPES.CAL_EVENT_RM, calEvent.id);
-                    }
-                }) : null,
-                node_dom('button[className=button button--primary]', {
-                    innerText: addNew ? "Speichern" : "Ändern",
-                    onclick: () => {
-                        editModeSetter(false);
-                        eventMutations(REDUCER_TYPES[addNew ? 'CAL_EVENT_ADD' : 'CAL_EVENT_MOD'], {
-                            ...(addNew ? {id: new Date().getTime()} : {}),
-                            ...calEvent
-                        })
-                    }
-                })
+                node_dom('div[className=flex space-between]', null, [
+                    !addNew ? node_dom('button[className=button button--sec][innerText=Löschen]', {
+                        onclick: () => {
+                            editModeSetter(false);
+                            eventMutations(REDUCER_TYPES.CAL_EVENT_RM, calEvent.id);
+                        }
+                    }) : null,
+                    node_dom('button[className=button button--primary]', {
+                        innerText: addNew ? "Speichern" : "Ändern",
+                        onclick: () => {
+                            editModeSetter(false);
+                            eventMutations(REDUCER_TYPES[addNew ? 'CAL_EVENT_ADD' : 'CAL_EVENT_MOD'], {
+                                ...(addNew ? {id: new Date().getTime()} : {}),
+                                ...calEvent
+                            })
+                        }
+                    })
+                ])
             ])
         ]
     }
