--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <title>Leur (beta)</title>
+    <title>Leur Beta (oder eher Alpha)</title>
 </head>
 <body>
 <noscript>JS ein, du Pfosten!</noscript>
-<script src="dist/build.js" type="module"></script>
+<!--<script src=https://l3p3.de/shr/lui.js></script>-->
+<script src="dist/build.js"></script>
 </body>
 </html>
